--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@ cocos2d-x/build
 cocos2d-x/cocos/platform/android/libcocos2dx
 runtime-src/proj.android/.idea
 SDK
+cocos2d-x/tools/simulator/libsimulator/proj.win32/Debug.win32/
+cocos2d-x/external/recast/proj.win32/Debug.win32/
+cocos2d-x/cocos/2d/Debug.win32/
+cocos2d-x/cocos/editor-support/spine/proj.win32/Debug.win32/
+cocos2d-x/cocos/scripting/lua-bindings/proj.win32/Debug.win32/
+runtime-src/proj.win32/Debug.win32/
+runtime-src/proj.win32/MahjongClient.VC.db
