--- a/runtime-src/proj.android/app/build.gradle
+++ b/runtime-src/proj.android/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion PROP_COMPILE_SDK_VERSION.toInteger()
     defaultConfig {
-        applicationId "com.queqijingfeng"
+        applicationId "com.mengya.game"
         minSdkVersion PROP_MIN_SDK_VERSION
         targetSdkVersion PROP_TARGET_SDK_VERSION
         versionCode 1
