--- a/runtime-src/proj.android/app/build.gradle
+++ b/runtime-src/proj.android/app/build.gradle
@@ -157,91 +157,14 @@ android.applicationVariants.all { variant ->
     delete "${buildDir}/intermediates/assets/${variant.dirName}"
 
     variant.mergeAssets.doLast {
+        exec {
+            workingDir "${buildDir}/../../../../../tools/utils/"
+            commandLine "python","autopackage.py"
+        }
+        //拷贝压缩包到资源目录
         copy {
-           from "${buildDir}/../../../../../res"
-           into "${buildDir}/intermediates/assets/${variant.dirName}/res"
-        }
-
-        copy {
-            from "${buildDir}/../../../../../src"
-            into "${buildDir}/intermediates/assets/${variant.dirName}/src"
-        }
-
-        // copy {
-        //     from "${buildDir}/../../../../cocos2d-x/cocos/scripting/lua-bindings/script"
-        //     into  "${buildDir}/intermediates/assets/${variant.dirName}/src/cocos"
-        // }
-
-        // compile & encrypt the scripts if necessary
-        def compileScript = (variant.name.compareTo('release') == 0)
-        if (project.hasProperty('PROP_COMPILE_SCRIPT')) {
-            compileScript = (PROP_COMPILE_SCRIPT.compareTo('1') == 0)
-        }
-
-        def encryptLua = project.hasProperty('PROP_LUA_ENCRYPT') && (PROP_LUA_ENCRYPT.compareTo('1') == 0)
-        if (compileScript || encryptLua) {
-            // -1 means not build bytecode
-            // 0 means build 32bit only
-            // 1 means build 64bit only
-            // 2 means build both 32bit & 64bit
-            def buildType = -1
-            if (compileScript) {
-                def need64 = false
-                def need32 = false
-                def abis = PROP_APP_ABI.split(':').collect{it as String}
-                abis.each{ abi->
-                    if (abi.compareTo('arm64-v8a') == 0) {
-                        need64 = true
-                    }
-                    else
-                    {
-                        need32 = true
-                    }
-                }
-
-                if (need64 && need32) {
-                    buildType = 2
-                }
-                else if (need64) {
-                    buildType = 1
-                }
-                else {
-                    buildType = 0
-                }
-            }
-
-            // invoke cocos command to compile & encrypt the lua files
-            switch (buildType) {
-                case -1:
-                    compileLua("${buildDir}/intermediates/assets/${variant.dirName}/src",
-                               "${buildDir}/intermediates/assets/${variant.dirName}/src",
-                               false, false, encryptLua)
-                    break
-                case 0:
-                    compileLua("${buildDir}/intermediates/assets/${variant.dirName}/src",
-                               "${buildDir}/intermediates/assets/${variant.dirName}/src",
-                               true, false, encryptLua)
-                    break
-                case 1:
-                    compileLua("${buildDir}/intermediates/assets/${variant.dirName}/src",
-                               "${buildDir}/intermediates/assets/${variant.dirName}/src/64bit",
-                               true, true, encryptLua)
-
-                    // remove the lua files in src dir
-                    delete fileTree("${buildDir}/intermediates/assets/${variant.dirName}/src") {
-                        include '**/*.lua'
-                    }
-                    delete "${buildDir}/intermediates/assets/${variant.dirName}/src/cocos"
-                    break
-                case 2:
-                    compileLua("${buildDir}/intermediates/assets/${variant.dirName}/src",
-                               "${buildDir}/intermediates/assets/${variant.dirName}/src/64bit",
-                               true, true, encryptLua)
-                    compileLua("${buildDir}/intermediates/assets/${variant.dirName}/src",
-                               "${buildDir}/intermediates/assets/${variant.dirName}/src",
-                               true, false, encryptLua)
-                    break
-            }
+           from "${buildDir}/../../../../../pacakge"
+           into "${buildDir}/intermediates/assets/${variant.dirName}/pacakge"
         }
     }
 }
